fix modal height overflow issue

--- a/client/src/routes/account/createProgramModal/style.scss
+++ b/client/src/routes/account/createProgramModal/style.scss
@@ -27,7 +27,7 @@
 }
 
 .modalContent {
-  height: 100%;
+  min-height: 100%;
 }
 
 @keyframes modal-slide-from-bottom {
